# enterprise-brain

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md  question.md
.github/workflows/: ci.yml
compiler/: Cargo.toml  README.md
compiler/src/: compile.rs  lib.rs  main.rs  model.rs  semantics.rs  snapshot.rs
compiler/tests/: conformance.rs
config/: agents.example.json
console/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
console/docs/: FIRST_RUN.md  LAUNCH.md
console/docs/showreel/: capture.mjs
console/public/faces/: README.md
console/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
console/src/components/: A11yDialog.tsx  AdminPreviewGate.tsx  AgentEmblem.tsx  AnswerCard.tsx  AtlasRoom.tsx  BursarSurface.tsx  Console.tsx  DiffView.tsx  DocInspector.tsx  EgoGraph.tsx  EmployeeDashboard.tsx  EntryScreen.tsx  ExportButton.tsx  FirstQuestionChip.tsx  FrontDoor.tsx  GraphInspector.tsx  GraphRoom.tsx  GraphSidebar.tsx  GuidedJourney.tsx  IdentityRail.tsx  LaneRoom.tsx  LensBar.module.css  LensBar.tsx  LensRoom.tsx  MotionPrimitives.tsx  OrgGraph.tsx  PersonAvatar.tsx  ProductHome.tsx  ProjectSurface.tsx  ProvenanceStrip.tsx  ResultsList.tsx  RoomBoundary.tsx  SensitivityBadge.tsx  Skeleton.tsx  ThemeToggle.tsx  (+3 more)
console/tests/: a11y_axe.test.tsx  aperture_ar.test.tsx  aperture_atlas.test.tsx  aperture_dashboard.test.tsx  aperture_diff.test.tsx  aperture_export.test.tsx  aperture_graph.test.tsx  aperture_lane.test.tsx  aperture_lens.test.tsx  aperture_pipeline.test.tsx  aperture_routes.test.tsx  aperture_u.test.tsx  aperture_workflow.test.tsx  ask_grounded.test.tsx  attestation_headings.test.tsx  comprehension_cinematic.test.tsx  governance_u.test.tsx  graph_presence.test.tsx  k3_robustness.test.tsx  ledger_live.test.tsx  setup.ts  showreel_entry.test.tsx  showreel_proposals.test.tsx
demo-reel/: .gitattributes  .gitignore  README.md  beats.json  package-lock.json  package.json
demo-reel/src/: assemble.ts  capture.ts  cards.ts  cursor-inject.ts  pdf-footer.ts  take-report.ts  timing.ts
demo-reel/test/: beats.test.ts  cards.test.ts  plan-fixture.ts  plan.test.ts  timing.test.ts
docs/: concepts.md  connector-certification.md  quickstart.md  runbook-denials.md  s0b-launch-gate.md  s0b-upstream-reproduction.md  threat-model.md  without-an-agent.md
docs/how-to/: add-a-source.md  read-the-ledger.md  register-an-agent.md  rotate-dev-keys.md  run-doctor.md  verify-a-ledger.md
docs/reference/: cli.md  serviceconfig.md  v1-api.md
fixtures/: brm.json  company.json  documents.json  oracle_stats.json  people.json  traps.json
fixtures/estate/: estate_ground_truth.jsonl  s3-access.json
retrieval/: Cargo.toml  README.md  config.example.json
retrieval/src/: embed.rs  envelope.rs  fuse.rs  index.rs  judge.rs  lib.rs  local_llm.rs  main.rs  search.rs  vector.rs
retrieval/tests/: fixture_gen.rs  governance.rs  hybrid_governance.rs
retrieval/tests/common/: mod.rs
retrieval/tests/fixtures/: embeddings_docs.json  embeddings_queries.json
service/: Cargo.toml  README.md  config.agent-bridge.example.json  config.demo.json  config.example.json
service/fonts/: LICENSES.md
service/src/: access_grants.rs  access_requests.rs  alerts.rs  answer.rs  atlas.rs  bootstrap.rs  cache.rs  clock.rs  conformance_kit.rs  cors.rs  diff.rs  doctor.rs  estate.rs  export.rs  generate.rs  graph.rs  grounding.rs  humanize.rs  identity.rs  lane.rs  lens.rs  lib.rs  main.rs  node_summary.rs  proposals.rs  ratelimit.rs  role_scope.rs  routes.rs  scope.rs  session.rs  sidecar.rs  visibility.rs  workflow.rs
service/src/agent/: context.rs  mod.rs  proposals.rs  runner.rs  standing.rs
service/src/agent_bridge/: claims.rs  jwks.rs  mod.rs  validate.rs
service/tests/: agent_bridge_ladder.rs  bootstrap_dev.rs  bridge_conformance.rs  bridge_live.rs  connector_kit.rs  estate_conformance.rs  estate_deny_alert.rs  estate_index.rs  estate_latency.rs  estate_probes.rs  estate_seam_demo.rs  fixture_gen.rs  gateway_doctor.rs  governance_a.rs  governance_access_grants.rs  governance_access_requests.rs  governance_ad.rs  governance_ae.rs  governance_ag.rs  governance_al.rs  governance_ar.rs  governance_at.rs  governance_auth.rs  governance_aw.rs  governance_bridge.rs  governance_g.rs  governance_gr.rs  governance_grant_reach.rs  governance_role_scope.rs  governance_routes.rs  governance_viewas.rs  governance_wfgen.rs  governance_workflow.rs  ledger_tamper.rs  metadata_conformance.rs  v1_document_body.rs  v1_gateway.rs  v1_latency.rs  v1_ledger_wiring.rs  v1_retrieval_probes.rs  (+1 more)
service/tests/common/: jwt.rs  mod.rs
service/tests/fixtures/: decision_matrix.golden.json  embeddings_docs_full.json
synth/: __init__.py  acl.py  banks.py  constants.py  estate.py  generate.py  humanized_names.py  model.py  oracle.py  traps.py
test/: conftest.py  schema_lite.py  test_audit_independent.py  test_banks.py  test_decision_invariance.py  test_humanized_names.py  test_name_consistency.py  test_p1_determinism.py  test_p2_denylist.py  test_p3_totality.py  test_p4_deny_by_default.py  test_p5_subject_access.py  test_p6_confused_deputy.py  test_p7_trap_presence.py  test_p8_allow_rate.py  test_p9_schema.py  test_schema_lite.py
test/schemas/: brm.schema.json  company.schema.json  documents.schema.json  ground_truth_row.schema.json  oracle_stats.schema.json  traps.schema.json
tools/: s0b-agent-id-diagnostics.ps1
wiki/: .gitignore  Cargo.toml
wiki/src/: authz.rs  compound.rs  derive.rs  ground.rs  lib.rs  main.rs  mentions.rs  provenance.rs  render.rs  scope.rs  scoped.rs  sources.rs  synth.rs
wiki/tests/: authz_loader.rs  authz_tamper.rs  compound_answer.rs  compound_nolaunder.rs  fail_closed.rs  firewall.rs  firewall_llm.rs  generation.rs  grounded_claims.rs  inputs_untouched.rs  mention_flags.rs  provenance.rs  scoped_claims.rs  scoped_gating.rs
wiki/tests/common/: mod.rs
(+206 files in other folders)
