[package]
name = "scope-compiler"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Enterprise Brain M1: compiles (principal, permission snapshot) into pinned, reason-traced allowlists"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lib]
name = "scope_compiler"
path = "src/lib.rs"

[[bin]]
name = "scope-compiler"
path = "src/main.rs"
