[package]
name = "wiki"
version = "0.1.0"
edition = "2021"
description = "Enterprise Brain — org knowledge layer (slice 1): deterministic, provenance-anchored entity pages derived from the synthetic Bryremead sources, firewalled from the compiled authorization model (read-only display, no write path)."
publish = false

# FIREWALL BY CONSTRUCTION: the runtime crate depends only on serde plumbing.
# It has NO dependency on `scope-compiler` and therefore no compilable path to
# `compile`, `write_artifacts`, or any mutation of the authorization model. The
# compiled artifacts are read as immutable JSON through this crate's own
# Deserialize-only structs (see `authz.rs`).
[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Tests compile FRESH M1 artifacts into a temp dir via the frozen compiler
# crate — exactly as `retrieval` and `service` do — to produce the read-only
# authz INPUT. This is the ONLY place `scope-compiler` is linked, and even here
# it only PRODUCES artifacts; the wiki runtime never touches it. sha2 powers the
# byte-equality firewall proof (artifacts unchanged across a full derivation).
scope-compiler = { path = "../compiler" }
sha2 = "0.10"

[lib]
name = "wiki"
path = "src/lib.rs"

[[bin]]
name = "wiki"
path = "src/main.rs"
